rnsc/tests/snapshots/error-parser-outside_class_directive-string_literal.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
"Hello World"
.class public HelloWorld
.super java/lang/Object
----- STDERR -----
[E-008] Error: unexpected string literal before class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/string_literal.rns:1:1 ]
   │
 1 │ "Hello World"
   │ ──────┬──────  
   │       ╰──────── valid context for Hello World string literal is: 'operand'.
   │ 
   │ Help: Make sure the file starts with a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-008
───╯
----- HASH -----
not generated
