rnsc/tests/snapshots/error-parser-outside_class_directive-string_literal_wasm.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
"Hello World"
.class public HelloWorld
----- STDERR -----
[PARSER-001] Error: unexpected string literal before class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/string_literal.rns:1:1 ]
   │
 1 │ "Hello World"
   │ ──────┬──────  
   │       ╰──────── this string literal must appear inside a class definition
   │ 
   │ Note: String literals are constant values that must appear inside '.code' blocks as instruction arguments.
───╯
----- HASH -----
not generated
