rnsc/tests/snapshots/error-parser-outside_class_directive-super_keyword.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; some comment
; another comment
super
.class public HelloWorld
.super java/lang/Object
----- STDERR -----
[E-008] Error: unexpected access flag before class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/super_keyword.rns:3:1 ]
   │
 3 │ super
   │ ──┬──  
   │   ╰──── valid contexts for super access flag are: 'class definition', 'method definition'.
   │ 
   │ Help: Make sure the file starts with a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-008
───╯
----- HASH -----
not generated
