rnsc/tests/snapshots/error-parser-outside_class_directive-super_keyword_wasm.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; some comment
; another comment
super
.class public HelloWorld
----- STDERR -----
[PARSER-001] Error: unexpected keyword before class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/super_keyword.rns:3:1 ]
   │
 3 │ super
   │ ──┬──  
   │   ╰──── this keyword must appear inside a class definition
   │ 
   │ Note: Access flags must appear within a '.class' or '.method' directive.
───╯
----- HASH -----
not generated
