rnsc/tests/snapshots/error-parser-outside_class_directive-type_hints.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
@string "Hello, World!"
@int 42 ; This one is not error, because after finding the first error, the parser will stop and try to find .class
----- STDERR -----
[E-008] Error: unexpected type hint before class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/type_hints.rns:1:1 ]
   │
 1 │ @string "Hello, World!"
   │ ───┬───  
   │    ╰───── valid context for @string type hint is: 'operand'.
   │ 
   │ Help: Make sure the file starts with a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-008
───╯
----- HASH -----
not generated
