rnsc/tests/snapshots/error-parser-package_directive-directive_as_name_class_end.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public .class_end/MyClass
.super java/lang/Object

.class_end
----- INPUT -----
; Tests that .class_end directive can be used as package name.
; This should produce an error because .class_end is a directive, not an identifier.
; Expected: parser error about unexpected token

.class public MyClass
.package .class_end

.class_end
----- STDERR -----
[TODO] Warning: TODO: reserved-like identifier used as name
[W-002] Warning: package name '.class_end' contains '.' separator
   ╭─[ test_data/rns_integration/error/parser/package_directive/directive_as_name_class_end.rns:6:10 ]
   │
 6 │ .package .class_end
   │          ─────┬────  
   │               ╰────── package '.class_end' uses '.' as separator
   │ 
   │ Help: If you intended Java-style package syntax, use '/' instead: '/class_end'
   │ 
   │ Note: In bytecode, package separators are represented as '/'. The '.' character is used in Java source syntax but will be kept as-is in the bytecode.
───╯
[W-001] Warning: missing super directive
   ╭─[ test_data/rns_integration/error/parser/package_directive/directive_as_name_class_end.rns:5:1 ]
   │
 5 │ .class public MyClass
   │ ───┬──  
   │    ╰──── class 'MyClass' is missing a '.super' directive
   │ 
   │ Note: The .super directive is required to specify the superclass. Defaulting to 'java/lang/Object'.
───╯
----- JAVAP -----
Classfile <TEMP_DIR>/.class_end/MyClass.class
  Last modified <DATE>; size 70 bytes
  SHA-256 checksum 26b03eda8aaa34b0af9e67cbd8f458c66cc12668a24d5b625de84da6ec93028a
public class .class_end.MyClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // .class_end/MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // ".class_end/MyClass"
  #4 = Utf8               .class_end/MyClass
{
}
